<resources>
    <string name="app_name">Browser</string>
    <string name="url_input_hint">Enter url…</string>
    <string name="go_button_text">Go</string>
    <string name="go_back_text">Go back</string>
    <string name="go_forward_text">Go forward</string>
    <string name="refresh_text">Refresh</string>
    <string name="home_text">Home</string>
    <string name="download_dialog_title">Download File</string>
    <string name="download_dialog_text">File name: %1$s\nFile url: %2$s</string>
    <string name="download_accept_button_text">Download</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="download_start_msg">Download start: %s</string>
    <string name="download_failed_msg">Download failed: %s</string>
    <string name="download_complete_msg">Download complete: %s</string>
    <string name="download_storage_permission_error">Error: download a file needs storage permission. Please grant it in application settings.</string>
    <string name="menu_about_text">About</string>
    <string name="download_dialog_hint">Please enter the url of the file to download…</string>
    <string name="ok_text">OK</string>
    <string name="about_desc">Browser\nVersion: %s</string>
    <string name="menu_text">Menu</string>
    <string name="tabs_text">Tabs</string>
    <string name="menu_user_agent_title">User-Agent Info</string>
    <string name="menu_user_agent">User-Agent</string>
    <string name="menu_user_agent_default">Default</string>
    <string name="menu_user_agent_chrome_desktop">Chrome (Desktop)</string>
    <string name="menu_user_agent_firefox_desktop">Firefox (Desktop)</string>
    <string name="menu_user_agent_safari_ios">Safari (iOS)</string>
    <string name="menu_media_detection_text">Media file detection</string>
    <string name="security_warning">Security warning</string>
    <string name="ssl_dialog_warning">The SSL certificate of this website has a problem: %s\nDo you want to continue?</string>
    <string name="continue_text">Continue</string>
    <string name="ssl_untrusted">Certificate untrusted</string>
    <string name="ssl_expired">Certificate expired</string>
    <string name="ssl_id_mismatch">Domain mismatch</string>
    <string name="ssl_not_yet_valid">Certificate not yet valid</string>
    <string name="ssl_invalid">Certificate invalid</string>
    <string name="ssl_unknown_error">Unknown error: %d</string>
    <string name="unknown_error">Unknown error</string>
    <string name="tabs_title_text">%d. %s</string>
    <string name="close_current_tab_text">Close current tab</string>
    <string name="new_tab_text">New tab</string>
    <string name="url_copied_text">Url copied</string>
    <string name="copy_url_button_text">Copy url</string>
    <string name="view_source_text">View source</string>
    <string name="menu_exit_text">Exit</string>
    <string name="link_dialog_title">Link options</string>
    <string name="link_dialog_text">Link: %s</string>
    <string name="open_link_text">Open link</string>
</resources>