<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- I use visibility = invisible to prevent the resize of webview -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:progress="0"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:id="@+id/top_bar">

        <EditText
            android:id="@+id/url_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/url_input_hint"
            android:imeOptions="actionGo"
            android:inputType="textUri"
            android:minHeight="50dp"
            android:scrollHorizontally="true"
            android:overScrollMode="always"
            android:selectAllOnFocus="true" />

        <ImageButton
            style="@style/top_image_button_style"
            android:id="@+id/go_button"
            android:src="@drawable/ic_go"
            android:contentDescription="@string/go_button_text" />

        <ImageButton
            style="@style/top_image_button_style"
            android:id="@+id/refresh_button"
            android:src="@drawable/ic_refresh"
            android:contentDescription="@string/refresh_text" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/tab_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:elevation="4dp"
        android:paddingHorizontal="16dp"
        android:id="@+id/navigation_bar">
        <ImageButton
            style="@style/navigation_image_button_style"
            android:id="@+id/back_button"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/go_back_text" />

        <ImageButton
            style="@style/navigation_image_button_style"
            android:id="@+id/forward_button"
            android:src="@drawable/ic_forward"
            android:contentDescription="@string/go_forward_text" />

        <ImageButton
            style="@style/navigation_image_button_style"
            android:id="@+id/home_button"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/home_text" />

        <ImageButton
            style="@style/navigation_image_button_style"
            android:id="@+id/tabs_button"
            android:src="@drawable/ic_tabs"
            android:contentDescription="@string/tabs_text" />

        <ImageButton
            style="@style/navigation_image_button_style"
            android:id="@+id/menu_button"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/menu_text" />

    </LinearLayout>
</LinearLayout>